added more functionalities in the admin page

--- a/views/addOpp.mustache
+++ b/views/addOpp.mustache
@@ -18,7 +18,7 @@
 <body>
     <header>
         <h1>Add Opportunities</h1>
-        <a href="/student_dashboard/{{_id}}" class="logout-button">Go Back</a>
+        <a href="/student_dashboard/{{userId}}" class="logout-button">Go Back</a>
     </header>
 
     <!-- Placeholder content for adding opportunities -->
