--- a/views/admin_dashboard.mustache
+++ b/views/admin_dashboard.mustache
@@ -38,7 +38,7 @@
 
 </main>
  <div class="header-buttons">
-            <a href="/manageStudent" class="dashboard-button">Manage Student</a>
+            <a href="/manageStudent/{{userData.userId}}" class="dashboard-button">Manage Student</a>
             <a href="/manageMentor" class="dashboard-button">Mange Mentor</a>
         </div>
 
