--- a/views/login.mustache
+++ b/views/login.mustache
@@ -25,7 +25,11 @@
                 {{errorMessage}}
             </div>
             {{/errorMessage}}
-
+            <p> Admin details <br>
+            Username:Debo256
+            Password:Deboola256
+            
+            </p>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
