--- a/views/manageStudent.mustache
+++ b/views/manageStudent.mustache
@@ -21,37 +21,42 @@
 
     <!-- Table to display student records -->
     <!-- Table to display student records -->
-<table>
+    <h2>View Student Records</h2>
+
+  <table border="1">
     <thead>
-        <tr>
-            <th>FirstName</th>
-            <th>LastName</th>
-            <th>Department</th>
-            <th>Username</th>
-            <th>Email</th>
-            <th>Actions</th>
-        </tr>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Department</th>
+        <th>Username</th>
+        <th>Email</th>
+        <th>Action</th>
+
+      </tr>
     </thead>
     <tbody>
-        {{#students}}
+      {{#students}}
+       
         <tr>
-            <td>{{firstName}}</td>
-            <td>{{lastName}}</td>
-            <td>{{department}}</td>
-            <td>{{username}}</td>
-            <td>{{email}}</td>
-            <td>
-                <!-- Font Awesome icons for delete and modify actions -->
-                <i class="fas fa-trash" onclick="deleteStudent('{{_id}}')" style="color: red;"></i>
-                <a href="/modifyStudent/{{_id}}">
-                    <i class="fas fa-edit"></i>
-                </a>
-            </td>
-        </tr>
-        {{/students}}
-    </tbody>
-</table>
+          <td>{{firstName.firstName}}</td>
+          <td>{{firstName.lastName}}</td>
+          <td>{{firstName.department}}</td>
+          <td>{{firstName.username}}</td>
+          <td>{{firstName.email}}</td>
+          
 
+           <td>
+          <!-- Edit icon -->
+          <a href="/modifyStudent"><i class="fas fa-edit"></i></a>
+          
+          <!-- Delete icon (colored red) -->
+          <a href="/deleteStudent/{{_id}}" style="color: red;"><i class="fas fa-trash-alt"></i></a>
+        </td>
+        </tr>
+      {{/students}}
+    </tbody>
+  </table>
 
     <!-- Link to the external JavaScript file -->
     <script src="script.js"></script>
